fixed: image invisibility, img sizes, nav, ,footer

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1105,6 +1105,10 @@ input:checked + .toggle-bg {
   z-index: -10;
 }
 
+.order-2 {
+  order: 2;
+}
+
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -1162,6 +1166,26 @@ input:checked + .toggle-bg {
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .ml-auto {
@@ -1258,6 +1282,10 @@ input:checked + .toggle-bg {
 
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .block {
@@ -1471,8 +1499,8 @@ input:checked + .toggle-bg {
   width: 16rem;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-\[95\%\] {
+  width: 95%;
 }
 
 .w-\[80\%\] {
@@ -1659,6 +1687,10 @@ input:checked + .toggle-bg {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -4565,10 +4597,6 @@ body {
     left: 0px;
   }
 
-  .md\:-bottom-28 {
-    bottom: -7rem;
-  }
-
   .md\:-bottom-32 {
     bottom: -8rem;
   }
@@ -4644,6 +4672,10 @@ body {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:w-\[90\%\] {
+    width: 90%;
   }
 
   .md\:w-9 {
